@startuml LegacyMotorsER

entity Customer {
  customer_id : int <<PK>>
  email : string
  name : string
  surname : string
  phone : string
  address : string
  dni : string
}

entity Login {
  login_id : int <<PK>>
  username : string
  password : string
  role : string
}

entity Employee {
  admin_id : int <<PK>>
  name : string
  surname : string
  email : string
  phone : string
  position : string
  hire_date : date
  salary : decimal
}

entity Provider {
  provider_id : int <<PK>>
  name : string
  email : string
  dni : string
  cif : string
  address : string
}

entity Vehicle {
  vehicle_id : int <<PK>>
  plate : string
  fuel : string
  color : string
  price_per_day : decimal
  available : boolean
  doors : int
  capacity : int
  transmission : string
  description : string
  category : string
}

entity Brand {
  brand_id : int <<PK>>
  name : string
}

entity Model {
  model_id : int <<PK>>
  name : string
  description : string
  year : int
}

entity Reservation {
  reservation_id : int <<PK>>
  start_date : date
  end_date : date
  total_price : int
  status : string
  reservation_date : date
}

entity Payment_Details {
  payment_id : int <<PK>>
  payment_method : string
  card_number : string
  expiry_date : date
  cvv : string
}

entity Review {
  review_id : int <<PK>>
  rating : int
  comment : string
  date : date
}

entity Image {
  image_id : int <<PK>>
  file_name : string
}

entity Invoice {
  invoice_id : int <<PK>>
  number : string
  price : float
  date : date
}

Customer ||--o{ Login
Employee ||--o{ Login
Provider ||--o{ Vehicle
Vehicle }|--o{ Brand
Vehicle }|--o{ Model
Brand ||--o{ Model
Reservation }|--o{ Customer
Reservation }|--o{ Payment_Details
Reservation }|--o{ Review
Vehicle }|--o{ Reservation
Image }|--o{ Vehicle
Invoice }|--o{ Customer
Reservation }|--o{ Invoice
Review }|--o{ Customer
Customer }|--o{ Payment_Details


@enduml
